tests/compile_fail/invalid_media_query_list_empty_literal.rs
use surgeist_style::MediaQueryList;

fn main() {
    let _list = MediaQueryList {
        queries: Vec::new(),
    };
}
