tests/compile_fail/invalid_media_query_list_empty_literal.stderr
error[E0451]: field `queries` of struct `MediaQueryList` is private
 --> tests/compile_fail/invalid_media_query_list_empty_literal.rs:5:9
  |
4 |     let _list = MediaQueryList {
  |                 -------------- in this type
5 |         queries: Vec::new(),
  |         ^^^^^^^ private field
